# tfn-final4

./: .env.example  .gitignore  .vercelignore  commander_bot_adb.py  package-lock.json  package.json  pnpm-lock.yaml  prisma.config.ts  rok-bot-runbook.md  rok_login.sh  tailwind.config.ts  test-api.sh  test-parser.mjs  tsconfig.json  tsconfig.tsbuildinfo  waydroid_repair.sh
app/: globals.css  layout.tsx  page.tsx  territory-planner.tsx
companion-app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
companion-app/src-tauri/: Cargo.toml  entitlements.plist  gen_icons.py  tauri.conf.json
companion-app/src-tauri/binaries/: RoKScreenReader-aarch64-apple-darwin
companion-app/src-tauri/capabilities/: default.json
companion-app/src-tauri/icons/: icon.icns
companion-app/src-tauri/sidecars/: RoKScreenReader.swift  build.sh
companion-app/src-tauri/src/: lib.rs  main.rs
components/: accounts-content.tsx  animated-background.tsx  app-sidebar.tsx  ark-content.tsx  bot-tool-content.tsx  bot-tools-home.tsx  bundle-planner-card.tsx  bundles-content.tsx  calculator-content.tsx  calendar-content.tsx  commander-content.tsx  content-panel.tsx  create-kvk-modal.tsx  crystal-tech-content.tsx  dashboard-shell.tsx  equipment-calculator.tsx  equipment-forge.tsx  event-stats-panel.tsx  flag-calculator-content.tsx  gathering-of-heroes-content.tsx  general-tools-content.tsx  guides-content.tsx  home-content.tsx  kill-tracker-content.tsx  kvk-content.tsx  kvk-healing-content.tsx  kvk-scanner-content.tsx  mge-calculator.tsx  planner-content.tsx  staff-portal.tsx  (+8 more)
(+122 files in other folders)
